--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -2284,8 +2284,8 @@ InvalidDspFormatError(string dsp) = Invalid value for Database Schema Provider: 
 # Connection Configuration Options
 ConnectionConfigOptions_groups_general = General
 ConnectionConfigOptions_groups_security = Security and Encryption
-ConnectionConfigOptions_groups_initialization = Database Initialization
-ConnectionConfigOptions_groups_resiliency = Connection Resiliency & Failover
+ConnectionConfigOptions_groups_resiliency = Connection Resiliency
+ConnectionConfigOptions_failover_and_replication = Failover and Replication
 ConnectionConfigOptions_groups_pooling = Pooling Settings
 ConnectionConfigOptions_groups_context = Data Source & Context
 
