--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -7043,6 +7043,11 @@ The Query Processor estimates that implementing the following index could improv
         <target state="new">If your application is connecting to an AlwaysOn availability group (AG) on different subnets, setting this to true provides faster detection of and connection to the (currently) active server.</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="QueryServiceQueryExecutionCompletedWithErrors">
+        <source>Query execution completed with errors</source>
+        <target state="new">Query execution completed with errors</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
