--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -504,6 +504,10 @@ CouldntFindAzureFunction(string functionName, string fileName) = Couldn't find A
 MoreThanOneAzureFunctionWithName(string functionName, string fileName) = More than one Azure function found with the FunctionName '{0}' in {1}
 SqlBindingsNet5NotSupported = Adding SQL bindings is not supported for .NET 5
 
+############################################################################
+# SqlPackage Service
+
+SqlPackageInvalidRequestParameters = Invalid request parameters
 
 ############################################################################
 # Show Plan
