Add support for SQL Server 2025 compatibility level in

--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.resx
@@ -5279,6 +5279,10 @@ The Query Processor estimates that implementing the following index could improv
     <value>SQL Server 2022 (160)</value>
     <comment></comment>
   </data>
+  <data name="compatibilityLevel_sqlv170" xml:space="preserve">
+    <value>SQL Server 2025 (170)</value>
+    <comment></comment>
+  </data>
   <data name="general_containmentType_None" xml:space="preserve">
     <value>None</value>
     <comment></comment>
