--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -7053,6 +7053,11 @@ The Query Processor estimates that implementing the following index could improv
         <target state="new">Invalid request parameters</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="compatibilityLevel_sqlv170">
+        <source>SQL Server 2025 (170)</source>
+        <target state="new">SQL Server 2025 (170)</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
